# third_party_jsframework

./: .eslintrc  BUILD.gn  OAT.xml  build.js  build_jsmock_system_plugin.js  build_strip_native_min.js  bundle.json  js_framework_build.sh  package-lock.json  package.json  prebuild_env.sh  rollup-plugin-uglifyjs.js
mock-generate/: build.js  package.json
mock-generate/src/: main.ts
mock-generate/src/common/: commonUtils.ts
mock-generate/src/declaration-node/: callSignatureDeclaration.ts  classDeclaration.ts  constructorDeclaration.ts  enumDeclaration.ts  functionDeclaration.ts  heritageClauseDeclaration.ts  importAndExportDeclaration.ts  indexSignatureDeclaration.ts  interfaceDeclaration.ts  methodDeclaration.ts  methodSignatureDeclaration.ts  moduleDeclaration.ts  propertyDeclaration.ts  propertySignatureDeclaration.ts  sourceFileElementsAssemply.ts  typeAliasDeclaration.ts  typeParameterDeclaration.ts  variableStatementResolve.ts
mock-generate/src/generate/: generateClassDeclaration.ts  generateCommonFunction.ts  generateCommonMethod.ts  generateCommonMethodSignature.ts  generateCommonUtil.ts  generateIndex.ts  generateInterfaceDeclaration.ts  generateMockJsFile.ts  generateSystemIndex.ts
runtime/: css-what
runtime/main/: index.ts
runtime/main/app/: bundle.ts  index.ts
runtime/main/extend/mediaquery/: mediaQuery.ts  pluginMediaQuery.ts
runtime/main/extend/systemplugin/: ability.js  accessibility.js  batteryinfo.js  bluetooth.js  brightness.js  bytrace.js  calendar.js  cipher.js  contact.js  data.js  deviceInfo.js  deviceManager.js  display.js  distributedSchedule.js  document.js  featureAbility.js  file.js  fileio.js  geolocation.js  huks.js  i18n.js  index.js  inputMethod.js  inputMethodEngine.js  multimedia.js  net.js  network.js  nfc.js  pasteboard.js  request.js  resourceManager.js  screenLock.js  screenshot.js  sensor.js  settings.js  systemPackage.js  telephony.js  utils.js  window.js
runtime/main/extend/systemplugin/napi/: abilityAccessCtrl.js  bytrace.js  (+216 more)
runtime/main/manage/event/: CallbackManager.ts  TaskCenter.ts
runtime/main/manage/instance/: life.ts
runtime/main/model/: compiler.ts  directive.ts  domHelper.ts  events.ts  index.ts  pageLife.ts  selector.ts  vmOptions.ts
runtime/main/page/: Page.ts  register.ts
runtime/main/page/api/: Differ.ts  misc.ts
runtime/main/page/entry/: bundle.ts  init.ts
runtime/main/reactivity/: array.js  state.js
runtime/preparation/: init.ts  methods.ts
runtime/utils/: utils.ts
runtime/vdom/: Element.ts  NativeElementClassFactory.ts
test/ut/: runtime.ts
test/ut/manage/: bridge.ts
test/ut/model/: index.ts
(+61 files in other folders)
